feat: missed a word in description of project

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header>
       <h1>MRZ Tools</h1>
       <p>
-        This tool allows you edit or create and generate a Machine Readable Zone
-        (MRZ) for passports and other travel documents.
+        This tool allows you to edit or create and generate a Machine Readable
+        Zone (MRZ) for passports and other travel documents.
       </p>
     </header>
 
